--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE HTML>
-<html>
-
-	<head>
-		<title>GOWESTADS</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-noscript.css" />
-		</noscript>
-		<script data-ad-client="ca-pub-3626271738046513" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	</head>
-	
-	<body class="loading">
-
-	<audio autoplay="autoplay" height="100" width="100">
-            <source src="bgm/yuncundexiatian.mp3" type="audio/mp3" />
-        </audio>
-
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
-
-				<header id="header">
-					<h1>一路向西 |GOWESTADS| 遇见美好 </h1>
-					<p>广州西遇科技有限公司</p>
-					<p1>全球化数字营销资源整合服务商 | 致力于帮助中国品牌走向全球</p1>
-					<nav>
-						<ul>
-							<li><a href="https://www.facebook.com/business" class="fa fa-facebook" target="_blank"><span>Facebook Ads</span></a></li>
-							<li><a href="https://ads.google.com/home/" class="fa fa-google-plus" target="_blank"><span>Google Ads</span></a></li>
-							<li><a href="https://www.tiktok.com/business/en" class="fa fa-music" target="_blank"><span>Tiktok Ads</span></a></li>
-							<li><a href="https://business.twitter.com/" class="fa fa-twitter" target="_blank"><span>Twitter Ads</span></a></li>
-						</ul>
-					</nav>
-				</header>
-				
-				<footer id="footer">
-					<span class="copyright"> Copyright © 2021-2022 GUANGZHOU XIYU TECHNOLOGY CO., LTD  All Rights Reserved. </span>
-				</footer>
-				
-			</div>
-		</div>
-	</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>gowestads</title><script defer="defer" src="/js/chunk-vendors.0617ef08.js"></script><script defer="defer" src="/js/app.54ae7fb8.js"></script><link href="/css/chunk-vendors.febbcbea.css" rel="stylesheet"><link href="/css/app.d7374890.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but gowestads doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
